Simplification and optimization of property discovery